--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -39,4 +39,4 @@ jobs:
           tags: ${{ vars.DOCKERHUB_USERNAME }}/api_gateway:latest
           build-args: |
             SERVICE=api_gateway
-          platforms: ${{ matrix.architecture }}
+          platforms: ${{ matrix.platform }}
