--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -23,17 +23,11 @@ jobs:
         with:
           platforms: ${{ env.platforms }}
 
-      - name: Login to Docker Hub
+      - name: Login to Docker Registry
         uses: docker/login-action@v3
         with:
-          username: ${{ vars.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ vars.DOCKERHUB_USERNAME }}/api_gateway
+          username: ${{ vars.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
 
       - name: Build and push
         uses: docker/build-push-action@v6
@@ -42,6 +36,5 @@ jobs:
           push: true
           build-args: |
             SERVICE=api_gateway
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/api_gateway
           platforms: ${{ env.platforms }}
