--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI
+name: CI
 
 on:
   push:
@@ -24,9 +24,14 @@ jobs:
 
       - name: Setup Go
         uses: actions/setup-go@v5
+        with:
+          go-version: 1.24.0
 
       - name: Display Go version
         run: go version
+
+      - name: Verify dependencies
+        run: go mod verify
 
       - name: Install dependencies
         run: go mod download
@@ -34,8 +39,23 @@ jobs:
       - name: Build
         run: go build -v ./srv/${{ matrix.service }}
 
-      - name: Test with the Go CLI
-        run: go test -v ./srv/${{ matrix.service }}
+      - name: Run go vet
+        run: go vet ./srv/${{ matrix.service }}
+
+      - name: Install staticcheck
+        run: go install honnef.co/go/tools/cmd/staticcheck@latest
+
+      - name: Run staticcheck
+        run: staticcheck ./srv/${{ matrix.service }}
+
+      - name: Install golint
+        run: go install golang.org/x/lint/golint@latest
+
+      - name: Run golint
+        run: golint ./srv/${{ matrix.service }}
+
+      - name: Run tests
+        run: go test -race -vet=off ./srv/${{ matrix.service }}
 
   image:
     strategy:
@@ -44,7 +64,7 @@ jobs:
 
     runs-on: ubuntu-latest
     env:
-      platforms: linux/amd64,linux/arm64
+      platforms: linux/amd64
 
     steps:
       - name: Checkout
@@ -67,5 +87,5 @@ jobs:
           context: .
           push: true
           build-args: SERVICE=${{ matrix.service }}
-          tags: ${{ vars.DOCKER_USERNAME }}/api_gateway
+          tags: ${{ vars.DOCKER_USERNAME }}/${{ matrix.service }}:latest
           platforms: ${{ env.platforms }}
