add dependency between jobs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,6 +62,7 @@ jobs:
       matrix:
         service: [api_gateway]
 
+    needs: test
     runs-on: ubuntu-latest
     env:
       platforms: linux/amd64
