--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,11 +48,10 @@ jobs:
       - name: Run staticcheck
         run: staticcheck ./srv/${{ matrix.service }}
 
-      - name: Install golint
-        run: go install golang.org/x/lint/golint@latest
-
-      - name: Run golint
-        run: golint ./srv/${{ matrix.service }}
+      - name: Run lint
+        uses: golangci/golangci-lint-action@v6
+        with:
+          version: v1.64
 
       - name: Run tests
         run: go test -race -vet=off ./srv/${{ matrix.service }}
