--- a/compose.yml
+++ b/compose.yml
@@ -28,7 +28,10 @@ services:
     ports:
       - "80:8080"
     environment:
-      - NATS_URL=nats://nats:4222
+      - ENV_BROKER_URL=nats://nats:4222
+      - ENV_API_PORT=8080
+    volumes:
+      - ./config.yml:/data/config.yml:ro
     networks:
       - warehouse
     depends_on:
