--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,10 +10,6 @@ on:
 
 jobs:
   test:
-    strategy:
-      matrix:
-        service: [api_gateway]
-
     runs-on: ubuntu-latest
     env:
       platforms: linux/amd64,linux/arm64
@@ -37,16 +33,16 @@ jobs:
         run: go mod download
 
       - name: Build
-        run: go build -v ./srv/${{ matrix.service }}
+        run: go build -v ./...
 
       - name: Run go vet
-        run: go vet ./srv/${{ matrix.service }}
+        run: go vet ./...
 
       - name: Install staticcheck
         run: go install honnef.co/go/tools/cmd/staticcheck@latest
 
       - name: Run staticcheck
-        run: staticcheck ./srv/${{ matrix.service }}
+        run: staticcheck ./...
 
       - name: Run lint
         uses: golangci/golangci-lint-action@v6
@@ -54,7 +50,10 @@ jobs:
           version: v1.64
 
       - name: Run tests
-        run: go test -race -vet=off ./srv/${{ matrix.service }}
+        run: go test -race -covermode atomic -coverprofile=covprofile ./...
+
+      - name: Publish coveralls
+        uses: coverallsapp/github-action@v2.3.6
 
   image:
     strategy:
