--- a/compose.yml
+++ b/compose.yml
@@ -31,7 +31,7 @@ services:
       - ENV_BROKER_URL=nats://nats:4222
       - ENV_API_PORT=8080
     volumes:
-      - ./config.yml:/data/config.yml:ro
+      - ./config.yml:/data/config.yml
     networks:
       - warehouse
     depends_on:
