--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,9 @@ jobs:
       - name: Install dependencies
         run: go mod download
 
+      - name: Generate
+        run: go generate ./...
+
       - name: Build
         run: go build -v ./...
 
