--- a/compose.yml
+++ b/compose.yml
@@ -58,3 +58,14 @@ services:
       - warehouse
     depends_on:
       - nats
+
+  order:
+    build: { args: { SERVICE: order } }
+    environment:
+      - ENV_BROKER_URL=nats://nats:4222
+    volumes:
+      - ./config.yml:/data/config.yml
+    networks:
+      - warehouse
+    depends_on:
+      - nats
