--- a/compose.yml
+++ b/compose.yml
@@ -101,6 +101,8 @@ services:
       - "8086:8086"
     volumes:
       - ./influxdb_data:/var/lib/influxdb2
+    networks:
+      - warehouse
     environment:
       - DOCKER_INFLUXDB_INIT_MODE=setup
       - DOCKER_INFLUXDB_INIT_USERNAME=admin
@@ -108,6 +110,16 @@ services:
       - DOCKER_INFLUXDB_INIT_ORG=my-org
       - DOCKER_INFLUXDB_INIT_BUCKET=stockdb
       - DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=my-token
+  notification:
+    build: { args: { SERVICE: notification } }
+    environment:
+      - INFLUXDB_TOKEN=my-token
+      - ENV_BROKER_URL=nats://nats:4222
+    networks:
+      - warehouse
+    depends_on:
+      - nats
+      - influxdb
 
   collector:
     image: otel/opentelemetry-collector-contrib
