fix logical bugs

--- a/compose.yml
+++ b/compose.yml
@@ -37,10 +37,23 @@ services:
     depends_on:
       - nats
 
-  warehouse:
+  warehouse-1:
     build: { args: { SERVICE: warehouse } }
     environment:
       - ENV_BROKER_URL=nats://nats:4222
+      - ENV_WAREHOUSE_ID=1
+    volumes:
+      - ./config.yml:/data/config.yml
+    networks:
+      - warehouse
+    depends_on:
+      - nats
+
+  warehouse-2:
+    build: { args: { SERVICE: warehouse } }
+    environment:
+      - ENV_BROKER_URL=nats://nats:4222
+      - ENV_WAREHOUSE_ID=2
     volumes:
       - ./config.yml:/data/config.yml
     networks:
