--- a/compose.yml
+++ b/compose.yml
@@ -7,7 +7,7 @@ networks:
 
 services:
   nats:
-    image: nats:alpine
+    image: nats:2.10-alpine3.21
     ports:
       - "4222:4222"
     command:
