--- a/compose.yml
+++ b/compose.yml
@@ -1,7 +1,6 @@
 volumes:
   nats_data:
 
-
 networks:
   warehouse:
     driver: bridge
@@ -19,7 +18,7 @@ services:
     networks:
       - warehouse
     healthcheck:
-      test: [ "CMD-SHELL", "wget http://localhost:8222/healthz -q -S -O -" ]
+      test: ["CMD-SHELL", "wget http://localhost:8222/healthz -q -S -O -"]
       interval: 1s
       timeout: 5s
       retries: 5
@@ -59,6 +58,7 @@ services:
       - warehouse
     depends_on:
       - nats
+
   authenticator:
     build: { args: { SERVICE: authenticator } }
     environment:
@@ -69,3 +69,26 @@ services:
       - warehouse
     depends_on:
       - nats
+
+  collector:
+    image: otel/opentelemetry-collector-contrib
+    ports:
+      - "4317:4317"
+    volumes:
+      - ./containers/collector.yml:/etc/otelcol-contrib/config.yaml:ro
+  loki:
+    image: grafana/loki:3.3.1
+  prometheus:
+    image: prom/prometheus
+    ports:
+      - "9090:9090"
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yml"
+      - "--storage.tsdb.path=/prometheus"
+      - "--web.enable-otlp-receiver"
+  grafana:
+    image: grafana/grafana
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./containers/grafana:/etc/grafana/provisioning/
