implementata aggiunta delle regole da esguire in intervalli temporali, ticker da sistemare

--- a/compose.yml
+++ b/compose.yml
@@ -114,6 +114,7 @@ services:
     build: { args: { SERVICE: notification } }
     environment:
       - INFLUXDB_TOKEN=my-token
+      - INFLUXDB_ORG=my-org
       - ENV_BROKER_URL=nats://nats:4222
     networks:
       - warehouse
