--- a/compose.yml
+++ b/compose.yml
@@ -2,7 +2,6 @@ volumes:
   nats_data:
   grafana_data:
 
-
 services:
   nats:
     image: nats:2.10-alpine3.21
@@ -25,10 +24,9 @@ services:
       - "8080:8080"
     environment:
       - ENV_BROKER_URL=nats://nats:4222
-      - ENV_API_PORT=8080
       - OTLP_URL=collector:4317
-    volumes:
-      - ./config.yml:/data/config.yml:ro
+      - HTTP_HOST=0.0.0.0
+      - HTTP_PORT=8080
     depends_on:
       - nats
 
