Aggiunti ultime misurazioni e fix dei test

--- a/compose.yml
+++ b/compose.yml
@@ -2,6 +2,7 @@ volumes:
   nats_data:
   grafana_data:
 
+
 services:
   nats:
     image: nats:2.10-alpine3.21
@@ -91,7 +92,7 @@ services:
   loki:
     image: grafana/loki:3.4.2
   prometheus:
-    image: prom/prometheus
+    image: prom/prometheus:v3.2.1
     ports:
       - "9090:9090"
     command:
