--- a/compose.yml
+++ b/compose.yml
@@ -28,6 +28,7 @@ services:
       - OTLP_URL=collector:4317
       - HTTP_HOST=0.0.0.0
       - HTTP_PORT=8080
+      - ENV_SERVICE_ID=1
     depends_on:
       - nats
 
@@ -36,6 +37,7 @@ services:
     environment:
       - ENV_BROKER_URL=nats://nats:4222
       - ENV_WAREHOUSE_ID=1
+      - ENV_SERVICE_ID=1
       - OTLP_URL=collector:4317
     volumes:
       - ./config.yml:/data/config.yml
@@ -47,6 +49,7 @@ services:
     environment:
       - ENV_BROKER_URL=nats://nats:4222
       - ENV_WAREHOUSE_ID=2
+      - ENV_SERVICE_ID=2
       - OTLP_URL=collector:4317
     volumes:
       - ./config.yml:/data/config.yml
@@ -57,6 +60,7 @@ services:
     build: { args: { SERVICE: catalog } }
     environment:
       - ENV_BROKER_URL=nats://nats:4222
+      - ENV_SERVICE_ID=1
       - OTLP_URL=collector:4317
     volumes:
       - ./config.yml:/data/config.yml
@@ -67,6 +71,7 @@ services:
     build: { args: { SERVICE: order } }
     environment:
       - ENV_BROKER_URL=nats://nats:4222
+      - ENV_SERVICE_ID=1
       - OTLP_URL=collector:4317
     volumes:
       - ./config.yml:/data/config.yml
@@ -78,6 +83,7 @@ services:
     environment:
       - ENV_BROKER_URL=nats://nats:4222
       - OTLP_URL=collector:4317
+      - ENV_SERVICE_ID=1
     volumes:
       - ./config.yml:/data/config.yml
     depends_on:
