--- a/compose.yml
+++ b/compose.yml
@@ -5,12 +5,13 @@ volumes:
 
 services:
   nats:
-    image: nats:2.10-alpine3.21
+    image: nats:alpine
     ports:
       - "4222:4222"
     command:
       - "--jetstream"
       - "--store_dir=/data/jetstream"
+      - "--http_port=8222"
     volumes:
       - nats_data:/data/jetstream
     healthcheck:
