--- a/compose.yml
+++ b/compose.yml
@@ -74,9 +74,9 @@ services:
       - OTLP_URL=collector:4317
     depends_on:
       - nats
+
   influxdb:
-    image: influxdb:2.7-alpine
-    container_name: influxdb
+    image: influxdb:alpine
     ports:
       - "8086:8086"
     volumes:
@@ -88,7 +88,6 @@ services:
       - DOCKER_INFLUXDB_INIT_ORG=my-org
       - DOCKER_INFLUXDB_INIT_BUCKET=stockdb
       - DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=my-token
-
   notification:
     build: { args: { SERVICE: notification } }
     environment:
