--- a/compose.yml
+++ b/compose.yml
@@ -98,6 +98,7 @@ services:
       - INFLUXDB_TOKEN=my-token
       - INFLUXDB_ORG=my-org
       - ENV_BROKER_URL=nats://nats:4222
+      - ENV_SERVICE_ID=1
     depends_on:
       - nats
       - influxdb
