--- a/compose.yml
+++ b/compose.yml
@@ -99,6 +99,7 @@ services:
       - INFLUXDB_TOKEN=my-token
       - INFLUXDB_ORG=my-org
       - ENV_BROKER_URL=nats://nats:4222
+      - OTLP_URL=collector:4317
       - ENV_SERVICE_ID=1
     depends_on:
       - nats
