--- a/compose.yml
+++ b/compose.yml
@@ -98,10 +98,12 @@ services:
     environment:
       - INFLUXDB_TOKEN=my-token
       - INFLUXDB_ORG=my-org
+      - INFLUXDB_URL=http://influxdb:8086
+      - INFLUXDB_BUCKET=stockdb
       - ENV_BROKER_URL=nats://nats:4222
       - OTLP_URL=collector:4317
       - ENV_SERVICE_ID=1
-      - RULE_CHECKER_TIMER=45
+      - RULE_CHECKER_TIMER=45s
     depends_on:
       - nats
       - influxdb
